test/compile-errors/library-not-configured.crow
import
	non-existent: foo

main void()
	()
